--- a/exercise1/style/style_main.css
+++ b/exercise1/style/style_main.css
@@ -7,22 +7,73 @@
     --warning-color: gold;
     --background-color: hsl(0, 0%, 91%);
     --lighter-background-color: hsl(0, 0%, 94%);
-
+    --video-background-color: hsl(0, 0%, 10%);
+    font-size: 1.3rem;
+    font-family:sticky sans-serif;
+    z-index: 1;
+    position: relative;
+}
+* {
+    box-sizing: border-box;
+}
+p {
+    padding: .1rem;
 }
 div.navbar {
     float: left;
     display: block;
-    top: 0;
+    position: sticky;
+    justify-content: center;
     width: 100%;
-    margin: 0 0 5rem 0;
-    padding: 0;
+    height: auto;
+    top: 0;
+    margin: 0;
+    box-shadow: 0px 5px 10px 5px hsla(0, 0%, 40%, 0.2);
+    z-index: 10;
+    background-color: var(--background-color);
+}
+@media only screen and (max-width: 768px) {
+    li.nav-element {
+        padding: 0rem .33rem;
+    }
+}
+.responsive-hidden-text {
+    display: none
+}
+@media only screen and (max-device-width: 600px) {
+    :root {
+        font-size: 1.6rem;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .hamburger-menu {
+        position: relative;
+        display: inline-block;
+        visibility: visible;
+    }
+    .navbar {
+        min-height: 3rem;
+    }
+    li.nav-element {
+        display: none;
+    }
+    li.responsive-hidden-text {
+        display: inline-block;
+    }
+    .hamburger-menu:focus li.nav-element, 
+    .hamburger-menu:hover li.nav-element {
+        display: inline-block;
+    }
+    .hamburger-menu:focus li.responsive-hidden-text, 
+    .hamburger-menu:hover li.responsive-hidden-text {
+        display: none;
+    }
 }
 li.nav-element {
     float: left;
-    margin: 0;
-    padding: 0;
+    padding: 0rem 1rem;
     border: 0;
-    border-right: .1rem solid black;
+    border-radius: .33rem;
 }
 li.nav-element:hover {
     background-color: var(--primary-color);
@@ -41,23 +92,37 @@ li a {
     text-decoration: none;
     color: var(--textcolor);
 }
-div.vid-grid {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 3rem;
+div.vidgrid {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    background-color: var(--video-background-color);
+    border-radius: 1rem;
+    padding: auto;
+    justify-content: center;
+    box-shadow: 0px 5px 10px 5px hsla(0, 0%, 40%, 0.2);
 }
 div.vidblock {
-    display: inherit;
-    padding: 1rem;
+    margin: 2rem;
+}
+@media only screen and (max-width: 768px) {
+    .vidgrid {
+        padding: 0;
+    }
+    .vidblock {
+        margin: .3rem;
+        padding: auto;
+        height: 100%;
+    }
 }
 div.city {
     display: flex;
+    flex-wrap: wrap;
     width: 95%;
     padding: 2rem 2rem;
     margin: 2rem 0rem;
     border-radius: 1rem;
     box-shadow: 0px 5px 10px 5px hsla(0, 0%, 40%, 0.2);
-    box-sizing: border-box;
     transition: .6s;
     background-color: var(--lighter-background-color);
 }
@@ -65,23 +130,21 @@ div.city:hover {
     transition: .6s;
     box-shadow: 0px 7px 13px 5px hsla(0, 0%, 35%, 0.25);
 }
-div.text {
-    width: 66%;
-}
 div.pic {
-    margin: 1rem;
-    width: 33%;
+    padding: 1rem;
 }
-img {
-    padding: auto;
+img, video, iframe {
+    max-width: 100%;
+    height: auto;
     border-radius: .5rem;
+}
+img{
     box-shadow: 0px 4px 7px 3px hsla(0, 0%, 40%, 0.2);
-    width: 100%;
+    padding: auto;
 }
 .main-content {
-    display: table;
     z-index: 1;
-    width: 80%;
+    width: 100%;
     height: 100%;
     min-width: 10rem;
     top: 0;
@@ -91,5 +154,71 @@ img {
 body {
     margin: 0;
     padding: 0;
+    top: 0;
     background: var(--background-color); 
+    z-index: 1;
+}
+/*responsive design*/
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+div.filler {
+    padding: 0;
+    margin: 0;
+}
+/*----------------------------------------
+ * For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For desktop: */
+  .col-s0 {width: 0%;}
+  .col-s1 {width: 8.33%;}
+  .col-s2 {width: 16.66%;}
+  .col-s3 {width: 25%;}
+  .col-s4 {width: 33.33%;}
+  .col-s5 {width: 41.66%;}
+  .col-s6 {width: 50%;}
+  .col-s7 {width: 58.33%;}
+  .col-s8 {width: 66.66%;}
+  .col-s9 {width: 75%;}
+  .col-s10 {width: 83.33%;}
+  .col-s11 {width: 91.66%;}
+  .col-s12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-0 {width: 0%;}
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+}
+@media only screen and (min-width: 1024px) {
+  /* For desktop: */
+  .col-l0 {width: 0%;}
+  .col-l1 {width: 8.33%;}
+  .col-l2 {width: 16.66%;}
+  .col-l3 {width: 25%;}
+  .col-l4 {width: 33.33%;}
+  .col-l5 {width: 41.66%;}
+  .col-l6 {width: 50%;}
+  .col-l7 {width: 58.33%;}
+  .col-l8 {width: 66.66%;}
+  .col-l9 {width: 75%;}
+  .col-l10 {width: 83.33%;}
+  .col-l11 {width: 91.66%;}
+  .col-l12 {width: 100%;}
 }
