fix: routing issue that went into empty space, not the calculator

--- a/exercise2/views/parts/header.ejs
+++ b/exercise2/views/parts/header.ejs
@@ -4,7 +4,7 @@
             <li class="nav-element responsive-hidden-text col-s12"><a href=".">Hover me</a></li>
             <li class="nav-element col-s2 col-2"><a href="/">Home</a></li>
             <li class="nav-element col-s6 col-6">
-            <a href="/simple-calculator">Do some addition on a webpage</a></li>
+            <a href="/add">Do some addition on a webpage</a></li>
             <li class="nav-element col-s4 col-4"><a href="/about">About Us</a></li>
         </ul>
     </div>
